Rename ESG_ variables to ESGF_

--- a/images/base/Dockerfile
+++ b/images/base/Dockerfile
@@ -6,26 +6,26 @@
 
 FROM centos:7.7.1908
 
-# Create the /esg directory
-ENV ESG_HOME /esg
-ENV ESG_CONFIG_DIR $ESG_HOME/config
-ENV ESG_CERT_DIR $ESG_HOME/certificates
-ENV ESG_INIT_DIR $ESG_HOME/init.d
-RUN mkdir -p $ESG_CONFIG_DIR && mkdir -p $ESG_CERT_DIR && mkdir -p $ESG_INIT_DIR
+# Create the ESGF_HOME directory
+ENV ESGF_HOME /esg
+ENV ESGF_CONFIG_DIR $ESGF_HOME/config
+ENV ESGF_CERT_DIR $ESGF_HOME/certificates
+ENV ESGF_INIT_DIR $ESGF_HOME/init.d
+RUN mkdir -p $ESGF_CONFIG_DIR && mkdir -p $ESGF_CERT_DIR && mkdir -p $ESGF_INIT_DIR
 
-# Create the esg user that will be used to run apps
-ENV ESG_UID 1000
-ENV ESG_GID 1000
-ENV ESG_USER esg
-ENV ESG_GROUP esg
-RUN groupadd --gid $ESG_GID $ESG_GROUP && \
+# Create the esgf user that will be used to run apps
+ENV ESGF_UID 1000
+ENV ESGF_GID 1000
+ENV ESGF_USER esgf
+ENV ESGF_GROUP esgf
+RUN groupadd --gid $ESGF_GID $ESGF_GROUP && \
     useradd \
       --no-create-home \
       --no-user-group \
-      --gid $ESG_GID \
+      --gid $ESGF_GID \
       --shell /sbin/nologin \
-      --uid $ESG_UID \
-      $ESG_USER
+      --uid $ESGF_UID \
+      $ESGF_USER
 
 # Set the locale to UTF-8 for all containers
 ENV LANG en_US.UTF-8
@@ -48,15 +48,15 @@ RUN curl -fsSL -o /usr/local/bin/tini https://github.com/krallin/tini/releases/d
 
 # Include a custom entrypoint that will execute startup scripts
 COPY docker-entrypoint.sh /usr/local/bin/
-# This init script adds the certificates from $ESG_CERT_DIR to the system trust roots
+# This init script adds the certificates from $ESGF_CERT_DIR to the system trust roots
 # It is numbered 00 so that it runs first
-COPY 00-esg-update-trust.sh $ESG_INIT_DIR/
-# Allow users in the esg group to update the trust roots
-RUN chown $ESG_USER:$ESG_GROUP /etc/pki/ca-trust/source/anchors && \
-    chown -R $ESG_USER:$ESG_GROUP /etc/pki/ca-trust/extracted && \
+COPY 00-update-trust.sh $ESGF_INIT_DIR/
+# Allow users in the esgf group to update the trust roots
+RUN chown $ESGF_USER:$ESGF_GROUP /etc/pki/ca-trust/source/anchors && \
+    chown -R $ESGF_USER:$ESGF_GROUP /etc/pki/ca-trust/extracted && \
     chmod g+w /etc/pki/ca-trust/source/anchors && \
     chmod -R g+w /etc/pki/ca-trust/extracted
 
 # Set the default user and entrypoint
-USER $ESG_UID
+USER $ESGF_UID
 ENTRYPOINT ["/usr/local/bin/tini", "-g", "--", "/usr/local/bin/docker-entrypoint.sh"]
