--- a/images/postgres/Dockerfile
+++ b/images/postgres/Dockerfile
@@ -8,28 +8,28 @@ FROM ${ESGF_REPOSITORY_BASE}/base:${ESGF_IMAGES_VERSION}
 
 USER root
 
-ENV ESG_INIT_DB_DIR $ESG_HOME/initdb.d
-RUN mkdir -p $ESG_INIT_DB_DIR
+ENV ESGF_INIT_DB_DIR $ESGF_HOME/initdb.d
+RUN mkdir -p $ESGF_INIT_DB_DIR
 
 ENV PGDATA /var/lib/pgsql/data
 ENV PGPORT 5432
 
 # Install postgresql package
-# We want to run as the esg user, so need to change some permissions after installation
+# We want to run as the esgf user, so need to change some permissions after installation
 # We also munge the sample config files to be correct for our use case by default, i.e.
 #   listen on all addresses and allow password-based auth
 RUN yum makecache && \
     yum install -y postgresql-server && \
     yum clean all && \
     mkdir -p /var/lib/pgsql/data && \
-    chown -R $ESG_USER:$ESG_GROUP /var/lib/pgsql /run/postgresql && \
+    chown -R $ESGF_USER:$ESGF_GROUP /var/lib/pgsql /run/postgresql && \
     sed -ri "s!^#?(listen_addresses)\s*=\s*\S+.*!\1 = '*'!" /usr/share/pgsql/postgresql.conf.sample && \
     echo "host all all all md5" >> /usr/share/pgsql/pg_hba.conf.sample
 
 # Install database initialisation script
-COPY 01-initdb.sh $ESG_INIT_DIR/
+COPY 01-initdb.sh $ESGF_INIT_DIR/
 
-# Run as the esg user by default
-USER $ESG_UID
+# Run as the esgf user by default
+USER $ESGF_UID
 EXPOSE 5432
 CMD ["postgres"]
