--- a/deploy/kubernetes/chart/templates/slcs/secret.yaml
+++ b/deploy/kubernetes/chart/templates/slcs/secret.yaml
@@ -1,16 +1,3 @@
-{{- define "esgf.slcs.runtime-settings" -}}
-HOSTNAME: {{ .Values.hostname | quote }}
-DATABASES:
-  # Use the same database configuration for both databases
-  default: &db
-    ENGINE: django.db.backends.postgresql
-    HOST: {{ include "esgf.database.host" . | quote }}
-    PORT: {{ include "esgf.database.port" . | quote }}
-    USER: {{ include "esgf.database.user" . | quote }}
-    PASSWORD: {{ include "esgf.database.password" . | quote }}
-    NAME: {{ include "esgf.database.dbname" . | quote }}
-  userdb: *db
-{{- end -}}
 {{- if .Values.slcs.enabled }}
 apiVersion: v1
 kind: Secret
@@ -20,6 +7,5 @@ metadata:
 type: Opaque
 data:
   # Inject the runtime settings ahead of the app settings, which are 10-
-  05-runtime-settings.yaml: |
-    {{ include "esgf.slcs.runtime-settings" . | b64enc | indent 4 | trim }}
+  05-runtime-settings.yaml: {{ tpl (.Files.Get "files/slcs/runtime-settings.yaml") . | b64enc | quote }}
 {{- end }}
