--- a/deploy/kubernetes/chart/values.yaml
+++ b/deploy/kubernetes/chart/values.yaml
@@ -1,8 +1,8 @@
-hostname: 192.168.99.101.nip.io
+hostname: esgf.130.246.129.72.nip.io
 
 image:
   prefix: breezy.badc.rl.ac.uk:4567/github-mirrors/esgf__esgf-docker
-  tag: 0322b008
+  tag: 5d96ec18
   pullPolicy: IfNotPresent
   pullSecrets:
     - name: breezy
@@ -21,7 +21,7 @@ persistence:
 ingress:
   enabled: true
   annotations:
-  tlsSecretName:
+  tlsSecretName: esgf-tls
 
 database:
   type: internal
@@ -37,6 +37,38 @@ database:
     image:
       repository: postgres
     resources: {}
+
+config:
+  ats: []
+    # - type: "CMIP5 Research"
+    #   attributeService: "https://esgf-node.llnl.gov/esgf-idp/saml/soap/secure/attributeService.htm"
+    #   description: "Users of CMIP5 data for non-commercial research purposes only"
+    #   registrationService: "https://esgf-node.llnl.gov/esgf-idp/secure/registrationService.htm"
+  cogs: []
+    # - name: "CoG-CU"
+    #   domain: "www.earthsystemcog.org"
+  endpoints: []
+    # - name: "jplnasagov#public"
+    #   gridftp: "esgf-node.jpl.nasa.gov:2811"
+    #   pathOut: "/esg_dataroot"
+  idps: []
+    # - https://esgf-node.llnl.gov/esgf-idp/idp/openidServer.htm
+    # - https://ceda.ac.uk/OpenID/Provider/server
+  knownProviders: []
+    # - name: DOE Lawrence Livermore National Laboratory (LLNL)
+    #   url: https://esgf-node.llnl.gov/esgf-idp/openid/
+  searchAliases:
+    # This is a list of lists, which comprise the sets
+    - [project, model_cohort]
+    - [project, model_cohort]
+    - [activity, experiment_family]
+  shards: []
+    # - esgf-node.llnl.gov/solr
+    # - esgf-index1.ceda.ac.uk/solr
+  lasServers: []
+    # - name: "ESGF-JPL-NODE"
+    #   url: "http://esgf-node.jpl.nasa.gov/las"
+    #   ip: "128.149.121.151"
 
 schemaMigrate:
   image:
@@ -54,6 +86,13 @@ slcs:
   enabled: true
   image:
     repository: slcs
+  replicaCount: 1
+  resources: {}
+
+orp:
+  enabled: true
+  image:
+    repository: orp
   replicaCount: 1
   resources: {}
 
