Make writable config directory for tomcat

--- a/images/tomcat-runtime/Dockerfile
+++ b/images/tomcat-runtime/Dockerfile
@@ -19,6 +19,9 @@ ENV PATH $CATALINA_HOME/bin:$PATH
 RUN mkdir -p $CATALINA_HOME
 WORKDIR $CATALINA_HOME
 
+# Make a config directory that is writable by the esgf user
+RUN mkdir -p $ESGF_HOME/tomcat && chown $ESGF_USER:$ESGF_GROUP $ESGF_HOME/tomcat
+
 # Install JRE
 RUN yum makecache && \
     yum install -y java-1.8.0-openjdk-1.8.0.242* && \
