Move WEBAPP_NAME to higher position in Dockerfiles

--- a/images/idp/Dockerfile
+++ b/images/idp/Dockerfile
@@ -8,7 +8,7 @@ ARG ESGF_IMAGES_VERSION=latest
 ARG WEBAPP_NAME=esgf-idp
 ARG ESGF_IDP_ASSETS=https://github.com/ESGF/esgf-idp/releases/download/
 ARG ESGF_IDP_VERSION=v2.8.8
-ARG WAR_LOCATION=$ESGF_IDP_ASSETS/$ESGF_IDP_VERSION/esgf-idp.war
+ARG WAR_LOCATION=$ESGF_IDP_ASSETS/$ESGF_IDP_VERSION/$WEBAPP_NAME.war
 
 FROM ${ESGF_REPOSITORY_BASE}/tomcat-builder:${ESGF_IMAGES_VERSION} as builder
 
