Try using environment variables in properties file

--- a/images/orp/esg-orp.properties
+++ b/images/orp/esg-orp.properties
@@ -1,5 +1,5 @@
-keystoreFile=${esg.orp.keystore.file}
-keystorePassword=${esg.orp.keystore.password}
-keystoreAlias=${esg.orp.keystore.alias}
+keystoreFile=${env:ESGF_KEYSTORE_FILE}
+keystorePassword=${env:ESGF_KEYSTORE_PASSWORD}
+keystoreAlias=${env:ESGF_KEYSTORE_ALIAS}
 
-orp.provider.list=/esg/config/esgf_known_providers.xml
+orp.provider.list=${env:ESGF_CONFIG_DIR}/esgf_known_providers.xml
