Hard code path to known providers

--- a/images/orp/esg-orp.properties
+++ b/images/orp/esg-orp.properties
@@ -2,4 +2,4 @@ keystoreFile=${esg.orp.keystore.file}
 keystorePassword=${esg.orp.keystore.password}
 keystoreAlias=${esg.orp.keystore.alias}
 
-orp.provider.list=${esg.home}/config/esgf_known_providers.xml
+orp.provider.list=/esg/config/esgf_known_providers.xml
