--- a/images/django/Dockerfile
+++ b/images/django/Dockerfile
@@ -6,20 +6,29 @@
 ##
 ## This allows the final Django images to be free of build dependencies like
 ## git, compilers, devel packages, etc.
+##
+## This Dockerfile is used to build two images with python2 and python3 as the
+## base image respectively
 #####
 
 ARG ESGF_REPOSITORY_BASE=esgfhub
 ARG ESGF_IMAGES_VERSION=latest
-FROM ${ESGF_REPOSITORY_BASE}/conda:${ESGF_IMAGES_VERSION}
+ARG PYTHON_MAJOR_VERSION=3
+FROM ${ESGF_REPOSITORY_BASE}/python${PYTHON_MAJOR_VERSION}:${ESGF_IMAGES_VERSION}
 
 USER root
 
 # Install gunicorn as WSGI server, whitenoise for serving static files and
 # django-flexi-settings for smart handling of settings
-RUN pip install --no-cache-dir \
+# We have to use a different version of gunicorn and whitenoise depending on whether
+# we are running Python 2 or 3
+ARG PYTHON_MAJOR_VERSION=3
+RUN GUNICORN_VERSION="$([ "$PYTHON_MAJOR_VERSION" -eq 2 ] && echo "19.10.0" || echo "20.0.4")" && \
+    WHITENOISE_VERSION="$([ "$PYTHON_MAJOR_VERSION" -eq 2 ] && echo "4.1.4" || echo "5.0.1")" && \
+    pip install --no-cache-dir \
       'django-flexi-settings==0.1.1' \
-      'gunicorn==20.0.4' \
-      'whitenoise==5.0.1'
+      "gunicorn==$GUNICORN_VERSION" \
+      "whitenoise==$WHITENOISE_VERSION"
 
 # Confiure Gunicorn and Django
 ENV DJANGO_SETTINGS_MODULE flexi_settings.settings
