Add healthcheck location to Nginx image

--- a/images/nginx/nginx.conf
+++ b/images/nginx/nginx.conf
@@ -61,4 +61,13 @@ http {
 
         return 404;
     }
+
+    # Special health-check server
+    server {
+        listen       8080;
+        listen       [::]:8080;
+        server_name  healthz.local;
+
+        return 204;
+    }
 }
