--- a/images/nginx/nginx.conf
+++ b/images/nginx/nginx.conf
@@ -1,5 +1,5 @@
 worker_processes auto;
-error_log /dev/stderr;
+error_log /var/log/nginx/error.log;
 pid /run/nginx/nginx.pid;
 
 # Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
@@ -17,7 +17,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /dev/stdout  main;
+    access_log  /var/log/nginx/access.log  main;
 
     sendfile            on;
     tcp_nopush          on;
