Remove SSL configuration from Nginx base image

--- a/images/nginx/nginx.conf
+++ b/images/nginx/nginx.conf
@@ -34,7 +34,15 @@ http {
 
     add_header X-Content-Type-Options nosniff;
 
-    # Special health-check server
+    # Default server block that returns 404
+    server {
+        listen       8080 default_server;
+        listen       [::]:8080 default_server;
+        server_name  _;
+        return 404;
+    }
+
+    # Health-check server block that returns 204 for a special domain
     server {
         listen       8080;
         listen       [::]:8080;
